src/client/play/scss/play.scss
$primary-color: #673ab7;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    overflow: hidden;
    touch-action: none;
    display: flex;
}

#ui {
    position: relative;
    width: 300px;
    height: 100vh;
    background-color: #EFEBF8;
    color: black;
    padding: 2em;
    font-family: sans-serif;
    border-right: #DCCCFE;
    z-index: 10;

    #admin {
        position: absolute;
        width: 100%;
        bottom: 0;
        left: 0;
        padding: 2em;
        background-color: transparentize($primary-color, .92);
        transition: bottom .5s ease-in-out;

        &:empty {
            bottom: -100%;
            padding: 0;
        }
    }
}

#canvas-wrap {
    position: relative;
    flex: 1;
    background-color: rgb(245, 250, 255);
}

p {
    margin-bottom: 1em;

    &::first-letter {
        text-transform: capitalize;
    }

    &.small {
        font-size: .825rem;
        color: rgba(0, 0, 0, .5);
        margin-top: -1em;
    }
}

h3 {
    font-size: 1rem;
    text-align: center;
    margin-bottom: 1em;
}

button {
    display: block;
    color: inherit;
    background-color: $primary-color;
    color: white;
    font-weight: bold;
    border: none;
    border-radius: 4px;
    margin: 1em auto 0 auto;
    padding: 1em 2em;
    cursor: pointer;
    text-transform: uppercase;
    font-size: .8em;
    letter-spacing: .05em;

    &:focus {
        outline: none;
    }

    &:not(.disabled):hover,
    &:not(.disabled):focus {
        background-color: lighten($primary-color, 5);
    }

    &.disabled {
        opacity: .6;
        cursor: not-allowed;
    }
}

input[type="number"] {
    width: 64px;
    height: 24px;
    padding: 16px;
    font-size: 1em;
    color: darken($primary-color, 10);
    background-color: transparentize($primary-color, .9);
    border: none;
    border-radius: 4px;

    &:hover,
    &:focus {
        outline: none;
        background-color: transparentize($primary-color, .85);
    }

    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
        -webkit-appearance: none;

    }
}

input[type="checkbox"] {
    position: relative;
    width: 24px;
    height: 24px;
    background-color: transparentize($primary-color, .9);
    border: none;
    border-radius: 4px;
    -webkit-appearance: none;
    cursor: pointer;
    vertical-align: middle;

    &:hover,
    &:focus {
        outline: none;

        &:not(:checked) {
            // background-color: transparentize($primary-color, .8);
        }
    }

    &:checked {
        background-color: $primary-color;

        &::after {
            content: "✓";
            position: absolute;
            top: 50%;
            left: 50%;
            font-weight: bold;
            color: white;
            font-size: 1.4em;
            transform: translate(-50%, -50%);
        }

        + label {
            opacity: 1;
        }
    }
}

label {
    display: inline-block;
    margin-left: .5em;
    cursor: pointer;
    user-select: none;
    color: $primary-color;
    opacity: .6;
}

.alert {
    cursor: pointer;
    padding: 2px 5px;
    font-size: 100%;
    width: 2px;
    height: 0;
    float: right;
    margin-top: 5px;
    position: relative;
    user-select: none;

    &:hover {
        font-size: 241%;
        left: -12px;
        top: -12px;
    }

    &:active {
        font-size: 200%;
        left: -9px;
        top: -9px;
    }
}

.member {
    .current {
        font-weight: bold;
    }
}

.modal {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;

    .message {
        width: 100%;
        text-align: center;
        position: absolute;
        font-size: 31pt;
    }
}

.alert-modal {
    box-shadow: 0 0 200px inset #ff0000;
    transition: 3s all;
    user-select: none;

    .message {
        top: 8%;
        color: #ffffff;
        text-shadow: 2px 2px 2px #e93131, 0px 0px 5px #a59b9b;
        transition: 1s all ease 0.5s;
    }

    &.hide {
        box-shadow: none;

        .message {
            opacity: 0.0;
        }
    }
}

.game-over-modal {
    background-color: rgba(0, 0, 0, 0.4);

    .message {
        top: 20%;
        color: #6F6581;
        background-color: #F8F7FC;
        padding: 40px 30px;
        box-shadow: 0px 2px 7px #5d5d5d;
    }
}

.pause-modal {
    background-color: rgb(188, 183, 199);

    .message {
        top: 50%;
        transform: translateY(-50%);
        color: #827697;
    }
}

